--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Lê Văn Labubu</span>
+            <span class="d-block d-lg-none">Nguyễn Thị Xinh</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="./assets/img/profile-me.jpg" alt="..." /></span>
                 </a>
@@ -48,8 +48,8 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
-                    LÊ VĂN
-                    <span class="text-primary">LABUBU</span> 
+                    Nguyễn Thị
+                    <span class="text-primary">Xinh</span> 
                 </h1>
                 <h5 class="mb-0 ">Fresher Backend(Java)</h5>
                 <hr>
@@ -148,7 +148,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Làm đồ án các môn học</h3>
-                        <div class="subheading mb-3">Trường ĐH Bôn Ba</div>
+                        <div class="subheading mb-3">Trường ĐH Phép thuật</div>
                         <p>Phần mềm Desktop Quản Lý Ký túc xá Phú Xuân (Java Swing + SQL)</p>
                         <p>Ứng dụng Quản lý khách sạn với môn Cấu trúc dữ liệu và giải thuật</p>
                         <p>Website bán giày (Java web Jsp, Hibernate),...</p>
