--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-2 col-4">
-                            Quê quán: Hưng Yên
+                            Quê quán: 
                         </div>
                         <div class="col-lg-10 col-8">
-                            xã Tiên La
+                            xã Tiên La, tỉnh Hưng Yên
                         </div>
                     </div>
                     <div class="row">
